--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant: Gerenciando máquinas virtuas</li>
         <li>Docker:Criando containers sem dor de cabeça</li>
 
-        <li>Ansible</li>
+        <li>Ansible: infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes</li>
     </ul>
