--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuas</li>
         <li>Docker:Criando containers sem dor de cabeça</li>
-        <li>Ansible: infraestrutura como código</li>
+        <li>Ansible: Sua infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes: introdução a orquestração de containers</li>
     </ul>
